fix: width overflow hidden

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -820,6 +820,8 @@ span {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+  max-width: 100vw;
 
   video {
     position: absolute;
